# glorp-rust

./: Cargo.toml  Dockerfile  Jenkinsfile  README.md
database/: Cargo.toml
database/src/: main.rs
dbclient/: Cargo.toml
dbclient/src/: main.rs
kube/: README.md  glorp_deploy.yaml  glorp_service.yaml
src/: config.rs  main.rs  pages.rs  parser.rs
static/: glorp.js  not_found.html
templates/: _layout.css  _layout.html  index.html  infobox.html  macros.html
webserver/: Cargo.toml
webserver/src/: main.rs  templater.rs
webserver/templates/: _layout.css  _layout.html  index.html
