[package]
name = "webserver"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.15.4"
axum = "0.8.8"
tokio = { version = "1.49.0", features = ["full"] }

displaydoc = "0.2.5"
pretty-error-debug = "0.3.2"
thiserror = "2.0.18"
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["trace", "fs"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
serde = { version = "1.0.228", features = ["derive"] }
tower-livereload = "0.10.2"
