[package]
name = "webserver"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.15.4"
axum = "0.8.8"
tokio = { version = "1.49.0", features = ["full"] }

displaydoc = "0.2.5"
thiserror = "2.0.18"
tower = { version = "0.5.3", features = ["full"] }
tower-http = { version = "0.6.8", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
rand = "0.10.0"
clap = { version = "4.5.58", features = ["derive"] }
